fix: change z-index to appear over ShowSideBar component

--- a/src/components/Sidebar/Sidebar.module.scss
+++ b/src/components/Sidebar/Sidebar.module.scss
@@ -14,7 +14,7 @@
   width: 26rem;
   transition: background-color 0.5s ease-in-out,
     border-right-color 0.5s ease-in-out, left 0.5s ease-in-out;
-  z-index: 1;
+  z-index: 2;
 
   .sb-logo-container {
     background-image: url("../../assets/logo-light.svg");
